added context and css style to titles

--- a/index.html
+++ b/index.html
@@ -3,12 +3,143 @@
 <body id=main>
     <div id=title><h1>George Washington</h1></div>
       <div id=img-div>
-        <img id=image src= "https://www.history.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_faces:center%2Cq_auto:good%2Cw_768/MTY1NDI3MjQzNDE2Mjk4OTYy/washington-gettyimages-640483581.jpg"/> 
-        <div id=img-caption> Our first President George Washington</div>
+        <img id=image src= "https://www.history.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_faces:center%2Cq_auto:good%2Cw_768/MTY1NDI3MjQzNDE2Mjk4OTYy/washington-gettyimages-640483581.jpg" atl="George Washington"/> 
+        <div id=img-caption>President George Washington</div>
       </div>
     <hr>
     <div id= tribute-info>
-      Washington lead the first continental army against great britian in battle.
+      <div id=early-div>
+        <h2 id=early-title>The Early Years</h2>
+        <img id=early-img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Residence_of_the_Washington_Family_on_the_Rappahannock.jpg/1920px-Residence_of_the_Washington_Family_on_the_Rappahannock.jpg" atl="George Washington's childhood home" />
+          <div id=early-caption>George Washington's childhood home</div>
+        <p>George Washington was born on February 22, 1732, at Popes Creek in Westmoreland County, Virginia,[17] and was the first of six children of Augustine and Mary Ball Washington.
+          [18] His father was a justice of the peace and a prominent public figure who had four additional children from his first marriage to Jane Butler.
+          [19] The family moved to Little Hunting Creek in 1735.Washington did not have the formal education his elder brothers received at Appleby Grammar School in England, but did attend the Lower Church School in Hartfield.
+           He learned mathematics, trigonometry, and land surveying and became a talented draftsman and map-maker. </p>
+      </div>
+      <div id= militia-div>
+        <h2 id=militia-title>French and Indian War</h2>
+        <p>In February 1754, Dinwiddie promoted Washington to lieutenant colonel and second-in-command of the 300-strong Virginia Regiment, with orders to confront French forces at the Forks of the Ohio.
+           Washington set out for the Forks with half the regiment in April and soon learned a French force of 1,000 had begun construction of Fort Duquesne there. 
+          In May, having set up a defensive position at Great Meadows, he learned that the French had made camp seven miles (11 km) away; he decided to take the offensive.
+          Under Washington, the Virginia Regiment had defended 300 miles (480 km) of frontier against twenty Indian attacks in ten months.
+          He increased the professionalism of the regiment as it increased from 300 to 1,000 men, and Virginia's frontier population suffered less than other colonies.
+          Some historians have said this was Washington's "only unqualified success" during the war.
+          Though he failed to realize a royal commission, he did gain self-confidence, leadership skills, and invaluable knowledge of British military tactics. 
+          The destructive competition Washington witnessed among colonial politicians fostered his later support of a strong central government.
+          </p>
+      </div>
+          <div id=british-div>
+            <h2 id=british-title>Prelude to the Revolution</h2>
+              <img id= british-img src="https://cdn.britannica.com/75/96175-050-2A7F222F/Boston-Tea-Party-Harbor-Dec-16-1773.jpg" alt="boston tea party" />
+              <div id=british-caption>Taxed tea being thrown overboard</div>
+            <p>Washington played a central role before and during the American Revolution. His disdain for the British military had begun when he was passed over for promotion into the Regular Army.
+              Opposed to taxes imposed by the British Parliament on the Colonies without proper representation, he and other colonists were also angered by the Royal Proclamation of 1763 which banned American settlement west of the Allegheny Mountains and protected the British fur trade.
+              Washington believed the Stamp Act of 1765 was an "Act of Oppression", and he celebrated its repeal the following year. 
+              In March 1766, Parliament passed the Declaratory Act asserting that Parliamentary law superseded colonial law.
+              In the late 1760s, the interference of the British Crown in American lucrative western land speculation spurred on the American Revolution. 
+              Washington himself was a prosperous land speculator, and in 1767, he encouraged "adventures" to acquire backcountry western lands.
+              Washington helped lead widespread protests against the Townshend Acts passed by Parliament in 1767, and he introduced a proposal in May 1769 drafted by George Mason which called Virginians to boycott British goods; the Acts were mostly repealed in 1770.
+            </p>
+          </div>
+          <div id=revolution-div>
+            <h2 id=revolution-title>The American Revolionary War</h2>
+               <img id= revolution-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Washington_Crossing_the_Delaware_by_Emanuel_Leutze%2C_MMA-NYC%2C_1851.jpg/1920px-Washington_Crossing_the_Delaware_by_Emanuel_Leutze%2C_MMA-NYC%2C_1851.jpg" alt="George washington crossing the Deleware"/>
+               <div id=revolution-caption>George Washington crossing the Deleware River</div>
+            <p>The American Revolutionary War began on April 19, 1775, with the Battles of Lexington and Concord and the Siege of Boston.
+              The colonists were divided over breaking away from British rule and split into two factions: Patriots who rejected British rule, and Loyalists who desired to remain subject to the King.
+              General Thomas Gage was commander of British forces in America at the beginning of the war.
+              Upon hearing the shocking news of the onset of war, Washington was "sobered and dismayed", and he hastily departed Mount Vernon on May 4, 1775, to join the Second Continental Congress in Philadelphia.
+              Congress created the Continental Army on June 14, 1775, and Samuel and John Adams nominated Washington to become its commander-in-chief. Washington was chosen over John Hancock because of his military experience and the belief that a Virginian would better unite the colonies. He was considered an incisive leader who kept his "ambition in check".[99] He was unanimously elected commander in chief by Congress the next day.[100]
+              Washington appeared before Congress in uniform and gave an acceptance speech on June 16, declining a salary—though he was later reimbursed expenses.
+              He was commissioned on June 19 and was roundly praised by Congressional delegates, including John Adams, who proclaimed that he was the man best suited to lead and unite the colonies.
+              Congress appointed Washington "General & Commander in chief of the army of the United Colonies and of all the forces raised or to be raised by them", and instructed him to take charge of the siege of Boston on June 22, 1775.
+            </p>
+            <br>
+            <h4>Siege of Boston</h4>
+            <p>
+              Early in 1775, in response to the growing rebellious movement, London sent British troops, commanded by General Thomas Gage, to occupy Boston.
+              They set up fortifications about the city, making it impervious to attack. 
+              Various local militias surrounded the city and effectively trapped the British, resulting in a standoff.
+            </p>
+            <h4>Battle of Long Island</h4>
+            <p>
+              Washington then proceeded to New York City, arriving on April 13, 1776, and began constructing fortifications to thwart the expected British attack.
+              He ordered his occupying forces to treat civilians and their property with respect, to avoid the abuses which Bostonian citizens suffered at the hands of British troops during their occupation.
+              A plot to assassinate or capture him was discovered and thwarted, resulting in the arrest of 98 people involved or complicit (56 of which were from Long Island (Kings (Brooklyn) and Queens counties), including the Loyalist Mayor of New York David Mathews.
+              Washington's bodyguard, Thomas Hickey, was hanged for mutiny and sedition.
+            </p>
+            <h4>Crossing of The Deleware</h4>
+            <p>
+              Washington crossed the Delaware River into Pennsylvania, where Lee's replacement John Sullivan joined him with 2,000 more troops.
+              The future of the Continental Army was in doubt for lack of supplies, a harsh winter, expiring enlistments, and desertions. Washington was disappointed that many New Jersey residents were Loyalists or skeptical about the prospect of independence.
+              Howe split up his British Army and posted a Hessian garrison at Trenton to hold western New Jersey and the east shore of the Delaware, but the army appeared complacent, and Washington and his generals devised a surprise attack on the Hessians at Trenton, which he codenamed "Victory or Death".
+            </p>
+            <h4>Siege of Yorktown</h4>
+            <p>
+              The Siege of Yorktown was a decisive Allied victory by the combined forces of the Continental Army commanded by General Washington, the French Army commanded by the General Comte de Rochambeau, and the French Navy commanded by Admiral de Grasse, in the defeat of Cornwallis' British forces.
+              On August 19, the march to Yorktown led by Washington and Rochambeau began, which is known now as the "celebrated march". 
+              Washington was in command of an army of 7,800 Frenchmen, 3,100 militia, and 8,000 Continentals. 
+              Not well experienced in siege warfare, Washington often referred to the judgment of General Rochambeau and used his advice about how to proceed; however, Rochambeau never challenged Washington's authority as the battle's commanding officer.
+              <br>
+              <br>
+              By late September, Patriot-French forces surrounded Yorktown, trapped the British army, and prevented British reinforcements from Clinton in the North, while the French navy emerged victorious at the Battle of the Chesapeake. 
+              The final American offensive was begun with a shot fired by Washington.
+              The siege ended with a British surrender on October 19, 1781; over 7,000 British soldiers were made prisoners of war, in the last major land battle of the American Revolutionary War.
+              <br>
+              <br>
+              Washington negotiated the terms of surrender for two days, and the official signing ceremony took place on October 19; Cornwallis claimed illness and was absent, sending General Charles O'Hara as his proxy.
+              As a gesture of goodwill, Washington held a dinner for the American, French, and British generals, all of whom fraternized on friendly terms and identified with one another as members of the same professional military caste.
+            </p>
+          </div>
+          <div id=president-div>
+            <h2 id=president-title>Presidency</h2>
+            <img id=president-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Scene_at_the_Signing_of_the_Constitution_of_the_United_States.jpg/1920px-Scene_at_the_Signing_of_the_Constitution_of_the_United_States.jpg" alt="congress"/>
+            <div id=president-caption>Signing of the constitution</div>
+            <p>
+              Washington was inaugurated on April 30, 1789, taking the oath of office at Federal Hall in New York City.
+              His coach was led by militia and a marching band and followed by statesmen and foreign dignitaries in an inaugural parade, with a crowd of 10,000.
+              Chancellor Robert R. Livingston administered the oath, using a Bible provided by the Masons, after which the militia fired a 13-gun salute.
+              Washington read a speech in the Senate Chamber, asking "that Almighty Being who rules over the universe, who presides in the councils of nations—and whose providential aids can supply every human defect, consecrate the liberties and happiness of the people of the United States".
+              Though he wished to serve without a salary, Congress insisted adamantly that he accept it, later providing Washington $25,000 per year to defray costs of the presidency.
+              <br>
+              <br>
+              Washington had planned to resign after his first term, but the political strife in the nation convinced him he should remain in office.
+              He was an able administrator and a judge of talent and character, and he regularly talked with department heads to get their advice.
+              He tolerated opposing views, despite fears that a democratic system would lead to political violence, and he conducted a smooth transition of power to his successor.
+              He remained non-partisan throughout his presidency and opposed the divisiveness of political parties, but he favored a strong central government, was sympathetic to a Federalist form of government, and leery of the Republican opposition.
+            </p>
+          </div>
+          <div id=retirement-div>
+            <h2 id=retirement-title>Retirement</h2>
+            <p>
+              Washington retired to Mount Vernon in March 1797 and devoted time to his plantations and other business interests, including his distillery.
+              His plantation operations were only minimally profitable, and his lands in the west (Piedmont) were under Indian attacks and yielded little income, with the squatters there refusing to pay rent. 
+              He attempted to sell these but without success. Washington was known to be rich because of the well-known "glorified façade of wealth and grandeur" at Mount Vernon, but nearly all his wealth was in the form of land and slaves rather than ready cash. 
+              To supplement his income, he erected a distillery for substantial whiskey production. 
+              Historians estimate that the estate was worth about $1 million in 1799 dollars, equivalent to $15,249,000 in 2020.
+            </p>
+          </div>
+          <div id=final-div>
+            <h2 id=final-title>Final Days</h2>
+             <img id=final-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Life_of_George_Washington%2C_Deathbed.jpg/1920px-Life_of_George_Washington%2C_Deathbed.jpg" alt="washiington on his death bed"/>
+             <div id=final-caption>George Washington on his death bed</div>
+            <p>
+              On December 12, 1799, Washington inspected his farms on horseback. 
+              He returned home late and had guests over for dinner. 
+              He had a sore throat the next day but was well enough to mark trees for cutting. 
+              That evening, he complained of chest congestion but was still cheerful. 
+              On Saturday, he awoke to an inflamed throat and difficulty breathing, so he ordered estate overseer George Rawlins to remove nearly a pint of his blood; bloodletting was a common practice of the time.
+              <br>
+              <br>
+              Washington's death came more swiftly than expected. 
+              On his deathbed, he instructed his private secretary Tobias Lear to wait three days before his burial, out of fear of being entombed alive. 
+              According to Lear, he died peacefully between 10 and 11 p.m. on December 14, 1799, with Martha seated at the foot of his bed. 
+              His last words were "'Tis well", from his conversation with Lear about his burial. 
+              He was 67.
+            </p>
+          </div>
+      </div>
     </div>
     <div >
       Click <a id=tribute-link href=https://en.wikipedia.org/wiki/George_Washington target="_blank" >here</a> to learn more! 
