design changes and added page links

--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>George Washington</title>
+    <meta charset="UTF-8>"
+  </head>
+     <link rel="stylesheet" href="styles.css">
 
-<link rel="stylesheet" href="styles.css">
 <body id=main>
     <div id=title><h1>George Washington</h1></div>
       <div id=img-div>
         <img id=image src= "https://www.history.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cg_faces:center%2Cq_auto:good%2Cw_768/MTY1NDI3MjQzNDE2Mjk4OTYy/washington-gettyimages-640483581.jpg" atl="George Washington"/> 
         <div id=img-caption>President George Washington</div>
       </div>
+      <div id=top-link>
+      <a class=link href=#early-div>Early Years</a>
+      <a class=link href=#militia-div>Militia</a>
+      <a class=link href=#british-div>Prelude</a>
+      <a class=link href=#revolution-div>Revolution</a>
+      <a class=link href=#president-div>Presidency</a>
+      <a class=link href=#retirement-div>Retirement</a>
+      <a class=link href=#final-div>Final Days</a>
+      </div>
     <hr>
     <div id= tribute-info>
       <div id=early-div>
         <h2 id=early-title>The Early Years</h2>
+        <div id=img-div>
         <img id=early-img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Residence_of_the_Washington_Family_on_the_Rappahannock.jpg/1920px-Residence_of_the_Washington_Family_on_the_Rappahannock.jpg" atl="George Washington's childhood home" />
-          <div id=early-caption>George Washington's childhood home</div>
+        <div id=caption>George Washington's childhood home</div>
+        </div>
         <p>George Washington was born on February 22, 1732, at Popes Creek in Westmoreland County, Virginia,[17] and was the first of six children of Augustine and Mary Ball Washington.
           [18] His father was a justice of the peace and a prominent public figure who had four additional children from his first marriage to Jane Butler.
           [19] The family moved to Little Hunting Creek in 1735.Washington did not have the formal education his elder brothers received at Appleby Grammar School in England, but did attend the Lower Church School in Hartfield.
@@ -31,9 +48,11 @@
       </div>
           <div id=british-div>
             <h2 id=british-title>Prelude to the Revolution</h2>
+            <div id=img-div>
               <img id= british-img src="https://cdn.britannica.com/75/96175-050-2A7F222F/Boston-Tea-Party-Harbor-Dec-16-1773.jpg" alt="boston tea party" />
-              <div id=british-caption>Taxed tea being thrown overboard</div>
-            <p>Washington played a central role before and during the American Revolution. His disdain for the British military had begun when he was passed over for promotion into the Regular Army.
+              <div id=caption>Taxed tea being thrown overboard</div>
+              </div>
+              <p>Washington played a central role before and during the American Revolution. His disdain for the British military had begun when he was passed over for promotion into the Regular Army.
               Opposed to taxes imposed by the British Parliament on the Colonies without proper representation, he and other colonists were also angered by the Royal Proclamation of 1763 which banned American settlement west of the Allegheny Mountains and protected the British fur trade.
               Washington believed the Stamp Act of 1765 was an "Act of Oppression", and he celebrated its repeal the following year. 
               In March 1766, Parliament passed the Declaratory Act asserting that Parliamentary law superseded colonial law.
@@ -44,9 +63,11 @@
           </div>
           <div id=revolution-div>
             <h2 id=revolution-title>The American Revolionary War</h2>
-               <img id= revolution-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Washington_Crossing_the_Delaware_by_Emanuel_Leutze%2C_MMA-NYC%2C_1851.jpg/1920px-Washington_Crossing_the_Delaware_by_Emanuel_Leutze%2C_MMA-NYC%2C_1851.jpg" alt="George washington crossing the Deleware"/>
-               <div id=revolution-caption>George Washington crossing the Deleware River</div>
-            <p>The American Revolutionary War began on April 19, 1775, with the Battles of Lexington and Concord and the Siege of Boston.
+            <div id=img-div>  
+            <img id= revolution-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Washington_Crossing_the_Delaware_by_Emanuel_Leutze%2C_MMA-NYC%2C_1851.jpg/1920px-Washington_Crossing_the_Delaware_by_Emanuel_Leutze%2C_MMA-NYC%2C_1851.jpg" alt="George washington crossing the Deleware"/>
+               <div id=caption>George Washington crossing the Deleware River</div>
+            </div>
+               <p>The American Revolutionary War began on April 19, 1775, with the Battles of Lexington and Concord and the Siege of Boston.
               The colonists were divided over breaking away from British rule and split into two factions: Patriots who rejected British rule, and Loyalists who desired to remain subject to the King.
               General Thomas Gage was commander of British forces in America at the beginning of the war.
               Upon hearing the shocking news of the onset of war, Washington was "sobered and dismayed", and he hastily departed Mount Vernon on May 4, 1775, to join the Second Continental Congress in Philadelphia.
@@ -94,8 +115,10 @@
           </div>
           <div id=president-div>
             <h2 id=president-title>Presidency</h2>
+            <div id=img-div>
             <img id=president-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Scene_at_the_Signing_of_the_Constitution_of_the_United_States.jpg/1920px-Scene_at_the_Signing_of_the_Constitution_of_the_United_States.jpg" alt="congress"/>
-            <div id=president-caption>Signing of the constitution</div>
+            <div id=caption>Signing of the constitution</div>
+            </div>
             <p>
               Washington was inaugurated on April 30, 1789, taking the oath of office at Federal Hall in New York City.
               His coach was led by militia and a marching band and followed by statesmen and foreign dignitaries in an inaugural parade, with a crowd of 10,000.
@@ -122,9 +145,11 @@
           </div>
           <div id=final-div>
             <h2 id=final-title>Final Days</h2>
+            <div id=img-div>
              <img id=final-img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Life_of_George_Washington%2C_Deathbed.jpg/1920px-Life_of_George_Washington%2C_Deathbed.jpg" alt="washiington on his death bed"/>
-             <div id=final-caption>George Washington on his death bed</div>
-            <p>
+             <div id=caption>George Washington on his death bed</div>
+            </div>
+             <p>
               On December 12, 1799, Washington inspected his farms on horseback. 
               He returned home late and had guests over for dinner. 
               He had a sore throat the next day but was well enough to mark trees for cutting. 
@@ -141,9 +166,12 @@
           </div>
       </div>
     </div>
-    <div >
-      Click <a id=tribute-link href=https://en.wikipedia.org/wiki/George_Washington target="_blank" >here</a> to learn more! 
+    <hr>
+    <div id=lrn-more>
+      Click <a class=link id=tribute-link href=https://en.wikipedia.org/wiki/George_Washington target="_blank" >here</a> to learn more! 
     </div>
-     
-    
+    <div id=btm-link>
+      Return to <a class=link href=#title>top</a>
+    </div>
   </body>
+  </html>
